<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.qeeqbii.activities.login.AnonymousAuthActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/firebase_lockup"
        android:src="@drawable/firebase_lockup_400" />

    <TextView
        android:id="@+id/title_anonymous"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginBottom="8dp"
        android:text="@string/label_anonymous_auth" />

    <TextView
        android:id="@+id/anonymous_status_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_anonymous"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/signed_out" />

    <TextView
        android:id="@+id/anonymous_status_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anonymous_status_id"
        android:layout_marginBottom="8dp"
        tools:text="Email: none" />

    <Button
        android:id="@+id/button_anonymous_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anonymous_status_email"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/button_anonymous_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:enabled="false"
        android:text="@string/sign_out"
        android:layout_alignTop="@+id/buttonSave"
        android:layout_alignEnd="@+id/title_anonymous"
        android:layout_marginEnd="15dp" />
    <!--android:layout_alignTop="@+id/button_anonymous_sign_in"
    android:layout_toRightOf="@+id/button_anonymous_sign_in"-->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save_and_continue"
        android:layout_marginStart="52dp"
        android:layout_below="@+id/editTextAllergie"
        android:layout_toEndOf="@+id/button_link_account"
        android:layout_marginTop="51dp" />
    <EditText
        android:id="@+id/editTextFirstName"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_below="@+id/button_link_account"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextLastName"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextAllergie"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/allergies"
        android:inputType="textPersonName"
        android:layout_below="@+id/editTextLastName"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextGout"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/aliments_proscrire"
        android:inputType="textMultiLine"
        android:layout_below="@+id/editTextAllergie"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/title_linking"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_anonymous_sign_in"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/account_linking" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_linking"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_alignBaseline="@+id/field_email"
        android:layout_alignBottom="@+id/field_email"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_link_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_email"
        android:enabled="false"
        android:text="@string/account_linking" />

</RelativeLayout>
